[package]
name = "hello-world-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.8.1"
tokio-stream = "0.1"
async-stream = "0.2"
futures = "0.3"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"

[[bin]]
    name = "client-stream-from-server"
    path = "src/client_stream_from_server.rs"

[[bin]]
    name = "client-bidirecional-stream"
    path = "src/client_bidirecional_stream.rs"
